--- a/bootstrap/config-admission.yml
+++ b/bootstrap/config-admission.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: admission
-  namespace: federation
+  namespace: federation-system
 data:
   config.yml: |
     apiVersion: apiserver.k8s.io/v1alpha1
@@ -16,7 +16,7 @@ data:
     clusters:
       - name: opa-api
         cluster:
-          server: http://opa.federation.svc.cluster.local:8181/v0/data/io/k8s/federation/placement
+          server: http://opa.federation-system.svc.cluster.local:8181/v0/data/io/k8s/federation/placement
     users:
       - name: scheduling-policy
         user:
