--- a/bootstrap/deployment-opa.yml
+++ b/bootstrap/deployment-opa.yml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: opa
   name: opa
-  namespace: federation
+  namespace: federation-system
 spec:
   replicas: 1
   template:
@@ -32,4 +32,4 @@ spec:
       volumes:
       - name: federation-kubeconfig
         secret:
-          secretName: federation-apiserver-kubeconfig
+          secretName: federation-controller-manager-kubeconfig
