--- a/bootstrap/svc-opa.yml
+++ b/bootstrap/svc-opa.yml
@@ -2,7 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: opa
-  namespace: federation
+  namespace: federation-system
 spec:
   selector:
     app: opa
